--- a/murphyj/package.json
+++ b/murphyj/package.json
@@ -9,5 +9,8 @@
     "grunt-jsxhint": "^0.4.0",
     "jit-grunt": "^0.9.0",
     "jshint": "^2.5.10"
+  },
+  "dependencies": {
+    "bluebird": "^2.3.11"
   }
 }
