--- a/murphyj/package.json
+++ b/murphyj/package.json
@@ -8,7 +8,8 @@
     "grunt-jasmine-node": "bbc-sport/grunt-jasmine-node#v0.4.0",
     "grunt-jsxhint": "^0.4.0",
     "jit-grunt": "^0.9.0",
-    "jshint": "^2.5.10"
+    "jshint": "^2.5.10",
+    "react-tools": "^0.12.2"
   },
   "dependencies": {
     "bluebird": "^2.3.11"
